<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activityHeader"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close_white_72dp"
            android:layout_gravity="right"
            android:layout_marginTop="18dp"
            android:layout_marginRight="14dp"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approved_card_part1"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            ></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approved_card_part2"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_marginTop="6dp"
            ></TextView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/card_v0" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/activityBody"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activityHeader"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_message"
            android:gravity="center"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <ImageButton
                android:id="@+id/ibMcOption"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/mastercard"
                android:background="@drawable/btn_card_choose"
                android:layout_marginRight="4dp"/>

            <ImageButton
                android:id="@+id/ibVisaOption"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/visa"
                android:background="@drawable/btn_card_choose"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvSelectedCardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/mastercard_platinum_title"
                android:layout_marginBottom="8dp"></TextView>

            <TextView
                android:id="@+id/tvSelectedCardDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="@color/colorLightGray"
                android:text="@string/mastercard_platinum_description"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_airplane"
                    android:layout_gravity="center"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miles_accrual"
                    android:lines="2"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:layout_marginTop="12dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_lock"
                    android:layout_gravity="center"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/protection_of"
                    android:lines="1"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:layout_marginTop="12dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase"
                    android:lines="1"
                    android:textAllCaps="false"
                    android:gravity="center"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_truck"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pacificard"
                    android:lines="1"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:layout_marginTop="12dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/box"
                    android:lines="1"
                    android:textAllCaps="false"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/know_more_benefits"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"></TextView>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/accept_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:background="@drawable/btn_filled_blue"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


